fix z-index modals always on top

--- a/react-app/src/components/Events/Elements/eventCard.css
+++ b/react-app/src/components/Events/Elements/eventCard.css
@@ -49,7 +49,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 0;
+    z-index: 1;
     border-radius: calc(var(--curve) * 1px);
     background: var(--surface-color);
     transform: translateY(100%);
